disable scrolling on landing page by adding/removing overflow class from body, fix pagecontainer for extra padding only on projects screen

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ table {
   font-family: 'Barlow Condensed', sans-serif;
   cursor: pointer;
 }
-*:focus {
+input:focus {
   outline: none;
   border: none;
   box-shadow: 0 0 .2rem #0f0f0d;
@@ -100,4 +100,7 @@ p {
 }
 .noDisplay {
   display: none;
+}
+.overflowHidden {
+  overflow: hidden;
 }
