--- a/src/components/ProjectPage/style.css
+++ b/src/components/ProjectPage/style.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding-top: 3.5rem;
+    padding-top: 4rem;
+    flex: 1;
 }
 .pageBanner {
     display: flex;
